--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -26,30 +26,34 @@
         </div>
       </div>
     </div>
-    <div *ngIf="apiError" class="row mt-2">
-      <app-message-box [message]="apiError" data-id="errorMessageBox"></app-message-box>
-    </div>
-    <app-navigation
-      (backward)="goBack()"
-      (forward)="sendUpdateAppointment()"
-      *ngIf="isAdmin"
-      [hasBackwardButton]="true"
-      [hasForwardButton]="true"
-      [invalid]="false"
-      backwardText="{{ 'navigation.revise' | translate }}"
-      class="btn-next-large"
-      forwardText="{{ 'poll.change' | translate }}"
-    ></app-navigation>
-    <app-navigation
-      (backward)="goBack()"
-      (forward)="sendCreateAppointment()"
-      *ngIf="!isAdmin"
-      [hasBackwardButton]="true"
-      [hasForwardButton]="true"
-      [invalid]="false"
-      backwardText="{{ 'navigation.revise' | translate }}"
-      class="btn-next-large"
-      forwardText="{{ 'poll.start' | translate }}"
-    ></app-navigation>
+    @if (apiError) {
+      <div class="row mt-2">
+        <app-message-box [message]="apiError" data-id="errorMessageBox"></app-message-box>
+      </div>
+    }
+    @if (isAdmin) {
+      <app-navigation
+        (backward)="goBack()"
+        (forward)="sendUpdateAppointment()"
+        [hasBackwardButton]="true"
+        [hasForwardButton]="true"
+        [invalid]="false"
+        backwardText="{{ 'navigation.revise' | translate }}"
+        class="btn-next-large"
+        forwardText="{{ 'poll.change' | translate }}"
+      ></app-navigation>
+    }
+    @if (!isAdmin) {
+      <app-navigation
+        (backward)="goBack()"
+        (forward)="sendCreateAppointment()"
+        [hasBackwardButton]="true"
+        [hasForwardButton]="true"
+        [invalid]="false"
+        backwardText="{{ 'navigation.revise' | translate }}"
+        class="btn-next-large"
+        forwardText="{{ 'poll.start' | translate }}"
+      ></app-navigation>
+    }
   </div>
 </div>
