--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -51,45 +51,48 @@
           required
           type="password"
         >
-        <div
-          *ngIf="showIsInvalid && isInvalid"
-          class="invalid-message"
-          data-id="msgInvalid"
-        >
-          {{ 'password.invalid' | translate }}
-        </div>
+        @if (showIsInvalid && isInvalid) {
+          <div
+            class="invalid-message"
+            data-id="msgInvalid"
+          >
+            {{ 'password.invalid' | translate }}
+          </div>
+        }
       </div>
     </div>
     <div class="d-flex form-row justify-content-center mt-3">
       <div class="col col-lg-8 pt-3">
-        <button
-          *ngIf="!isAdmin"
-          [disabled]="passwordForm.invalid"
-          class="btn btn-secondary btn-submit w-100"
-          data-id="userButton"
-          type="submit"
-        >
-          <span class="icon-create-poll"></span>
-          {{ 'poll.participate' | translate }}
-          <img alt="{{ 'poll.participate' | translate }}"
-               class="icon-create-poll"
-               src="assets/icn_umfrage_erstellen.svg"
+        @if (!isAdmin) {
+          <button
+            [disabled]="passwordForm.invalid"
+            class="btn btn-secondary btn-submit w-100"
+            data-id="userButton"
+            type="submit"
           >
-        </button>
-        <button
-          *ngIf="isAdmin"
-          [disabled]="passwordForm.invalid"
-          class="btn btn-secondary btn-submit w-100"
-          data-id="adminButton"
-          type="submit"
-        >
-          <span class="icon-create-poll"></span>
-          {{ 'poll.edit' | translate }}
-          <img alt="{{ 'poll.edit' | translate }}"
-               class="icon-create-poll"
-               src="assets/icn_umfrage_erstellen.svg"
+            <span class="icon-create-poll"></span>
+            {{ 'poll.participate' | translate }}
+            <img alt="{{ 'poll.participate' | translate }}"
+                 class="icon-create-poll"
+                 src="assets/icn_umfrage_erstellen.svg"
+            >
+          </button>
+        }
+        @if (isAdmin) {
+          <button
+            [disabled]="passwordForm.invalid"
+            class="btn btn-secondary btn-submit w-100"
+            data-id="adminButton"
+            type="submit"
           >
-        </button>
+            <span class="icon-create-poll"></span>
+            {{ 'poll.edit' | translate }}
+            <img alt="{{ 'poll.edit' | translate }}"
+                 class="icon-create-poll"
+                 src="assets/icn_umfrage_erstellen.svg"
+            >
+          </button>
+        }
       </div>
     </div>
   </form>
